<resources>
    <string name="app_name" translatable="false">Atarashii!</string>
    <string name="app_name_beta" translatable="false">Atarashii! β</string>
    <string name="title_activity_firstRun">First Run Setup</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="title_activity_profile">User profile</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_charts">Charts</string>
    <string name="title_activity_browse">Browse</string>
    <string name="title_activity_support">Support</string>
    <string name="menu_listType">Switch List</string>
    <string name="menu_inverse">Inverse List</string>
    <string name="menu_sync">Full Sync</string>
    <string name="menu_details">Details</string>
    <string name="menu_sort">Sort</string>
    <string name="sort_title">Title</string>
    <string name="sort_type">Type</string>
    <string name="sort_score">Score</string>
    <string name="sort_status">Status</string>
    <string name="sort_progress">Progress</string>
    <string name="toast_error_noConnectivity">No network connection detected.</string>
    <string name="toast_error_api">API error detected, please notify the developers!</string>
    <string name="toast_error_reviews">There are no reviews available.</string>
    <string name="toast_error_maintenance">API unavailable, maintenance in progress!</string>
    <string name="toast_error_UserRecord">Userprofile is empty!</string>
    <string name="toast_error_Search">Error while searching! Please try again later.</string>
    <string name="toast_error_Anime_Sync">Sync error while getting animelist!</string>
    <string name="toast_error_Manga_Sync">Sync error while getting mangalist!</string>
    <string name="toast_error_Records">Error while getting records. Please try again later.</string>
    <string name="toast_error_DetailsError">Atarashii can\'t load the details!</string>
    <string name="toast_error_keys">Atarashii can\'t get the Auth keys from AL!</string>
    <string name="toast_error_VerifyProblem">Check your credentials and try again.</string>
    <string name="toast_error_Friends">Sync error while getting friendlist!</string>
    <string name="toast_error_nothingFound">No anime or manga results found.</string>
    <string name="toast_error_convert">The comment could not be converted!</string>
    <string name="toast_error_layout">Atarashii can\'t get the input info!</string>
    <string name="toast_info_SyncMessage">Syncing everything. This could take a few seconds.</string>
    <string name="toast_info_password">Username and password combination doesn\'t match!</string>
    <string name="toast_info_Copied">Copied the title successfully to the clipboard!</string>
    <string name="toast_info_hold_on">Hold on a second, we are still loading information!</string>
    <string name="toast_info_comment_added">It could take 5 minutes until it is visible</string>
    <string name="toast_info_disabled">This feature is currently disabled :(</string>
    <string name="toast_info_disabled_youtube">Comments with Youtube videos aren\'t supported :(</string>
    <string name="toast_info_backup_list">The backup is not compatible with this site!</string>
    <string name="toast_info_comment">The comment is short!</string>
    <string name="toast_info_no_customlist">Please sync the lists after upgrading!</string>
    <string name="dialog_title_view">View</string>
    <string name="dialog_title_tags">My tags</string>
    <string name="dialog_title_storage_value">Storage value</string>
    <string name="dialog_title_rewatched_times">Times rewatched</string>
    <string name="dialog_title_rewatched_priority">Rewatch priority</string>
    <string name="dialog_title_storage">Storage type</string>
    <string name="dialog_title_comment">My comments</string>
    <string name="dialog_title_share">Share</string>
    <string name="dialog_title_share_via">Share via</string>
    <string name="dialog_title_Verifying">Verifying</string>
    <string name="dialog_title_records">Records</string>
    <string name="dialog_title_rating">Rating</string>
    <string name="dialog_title_watched_update">I\'ve watched</string>
    <string name="dialog_title_read_update">I\'ve read</string>
    <string name="dialog_title_status">Status</string>
    <string name="dialog_title_edit_comment">Edit comment</string>
    <string name="dialog_title_add_comment">Add comment</string>
    <string name="dialog_title_id_search">ID search</string>
    <string name="dialog_title_update_navigation">Update background</string>
    <string name="dialog_hint_tags">Separate your tags with a comma</string>
    <string name="dialog_hint_comment">Enter you comment</string>
    <string name="dialog_message_records">Loading records...</string>
    <string name="dialog_message_view">Which list do you want to view?</string>
    <string name="dialog_message_logout">Are you sure you wish to logout? This will erase all stored data and images.</string>
    <string name="dialog_message_id_search">Please press on the Anime or Manga button to search. Remember that Anime and Manga IDs aren\'t the same!</string>
    <string name="dialog_message_remove">Absolutely sure? Once it\'s gone, it\'s gone for good and can\'t be recovered. Not easily anyways.</string>
    <string name="dialog_message_share">Which list do you want to share?</string>
    <string name="dialog_message_Verifying">Making sure your account is OK. Hold tight a sec.</string>
    <string name="dialog_message_update_navigation">Enter the Image URL below.</string>
    <string name="dialog_message_last_post">Last post by</string>
    <string name="dialog_message_edit_comment">Are you sure that your comment should be updated?</string>
    <string name="dialog_message_socialmedia">To use Atarashii with a socialmedia account you must set a password.</string>
    <string name="dialog_message_add_comment">Do you really want to add a new comment?</string>
    <string name="dialog_label_cancel">Cancel</string>
    <string name="dialog_label_password">Set password</string>
    <string name="dialog_label_update">Update</string>
    <string name="dialog_label_anime">Anime</string>
    <string name="dialog_label_manga">Manga</string>
    <string name="dialog_label_animelist">My animelist</string>
    <string name="dialog_label_mangalist">My mangalist</string>
    <string name="dialog_title_remove">Remove from list</string>
    <string name="dialog_label_logout">Logout</string>
    <string name="dialog_label_remove">Remove</string>
    <string name="share_animelist">$username; shared an anime list using Atarashii: https://myanimelist.net/animelist/$name;!</string>
    <string name="share_mangalist">$username; shared a manga list using Atarashii: https://myanimelist.net/mangalist/$name;!</string>
    <string name="layout_card_title_details">Details</string>
    <string name="layout_card_title_activity">Activity</string>
    <string name="layout_discription">Application Icon</string>
    <string name="layout_card_loading">Loading</string>
    <string name="layout_card_birthday">Birthday</string>
    <string name="layout_card_location">Location</string>
    <string name="layout_card_website">Website</string>
    <string name="layout_card_comments">Comments</string>
    <string name="layout_card_forum">Forum posts</string>
    <string name="layout_card_last">Last online</string>
    <string name="layout_card_gender">Gender</string>
    <string name="layout_card_join">Join date</string>
    <string name="layout_card_acces">Access rank</string>
    <string name="access_rank_atarashii_developer">Atarashii developer</string>
    <string name="layout_card_anime_details">Anime Details</string>
    <string name="layout_card_manga_details">Manga Details</string>
    <string name="layout_card_anime_time">Time days</string>
    <string name="layout_card_anime_watching">Watching</string>
    <string name="layout_card_anime_completed">Completed</string>
    <string name="layout_card_anime_on">On hold</string>
    <string name="layout_card_anime_dropped">Dropped</string>
    <string name="layout_card_anime_plan">Plan to watch</string>
    <string name="layout_card_anime_total">Total entries</string>
    <string name="layout_card_manga_reading">Reading</string>
    <string name="layout_card_manga_plan">Plan to read</string>
    <string name="action_viewListOnMAL">View list in browser</string>
    <string name="action_viewtopic">View discussion</string>
    <string name="not_specified">not specified</string>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="unknown">unknown</string>
    <string name="creation_date">Creation date</string>
    <string name="Page_number">Page number</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="init_hint_choose">Please choose your preferred site.</string>
    <string name="init_hint_website">Website?</string>
    <string name="init_hint_myanimelist">MyAnimeList</string>
    <string name="init_hint_anilist">AniList</string>
    <string name="form_hint_user">Username</string>
    <string name="form_hint_pass">Password</string>
    <string name="form_hint_info">Enter your credentials above and press done.</string>
    <string name="form_hint_register">Register</string>
    <string name="form_hint_socialmedia">Social media login?</string>
    <string name="form_action_create">Create an Account</string>
    <string name="form_action_connect">Login</string>
    <string name="app_welcome" >Welcome to Atarashii, this application is a listmanager for tracking your watched anime and read manga.</string>
    <string name="cover_Watching">I\'ve watched:</string>
    <string name="cover_Completed">Completed</string>
    <string name="cover_Reading">I\'ve read:</string>
    <string name="cover_OnHold">On Hold at:</string>
    <string name="cover_score">Score:</string>
    <string name="cover_type">Type:</string>
    <string name="cover_status">Status:</string>
    <string name="cover_Dropped">Dropped</string>
    <string name="cover_PlanningToWatch">Planning to watch</string>
    <string name="cover_PlanningToRead">Planning to read</string>
    <string name="action_PlusOneWatched">+1 Watched</string>
    <string name="action_PlusOneRead">+1 Read</string>
    <string name="action_MarkAsComplete">Mark Completed</string>
    <string name="label_Chapters">Chapters:</string>
    <string name="label_Volumes">Volumes:</string>
    <string name="label_Number">Number:</string>
    <string name="cover_Episodes">Episodes:</string>
    <string name="cover_Members">Members:</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_my_list">My List</string>
    <string name="nav_item_my_friends">My Friends</string>
    <string name="card_content_volumes">Volumes</string>
    <string name="card_content_duration">Duration</string>
    <string name="card_content_broadcast">Broadcast</string>
    <string name="card_content_episodes">Episodes</string>
    <string name="card_content_mal_score">Score</string>
    <string name="card_content_media_type">Media Type</string>
    <string name="card_content_media_status">Media Status</string>
    <string name="card_content_start">Start Date</string>
    <string name="card_content_end">End Date</string>
    <string name="card_content_producers">Producers</string>
    <string name="card_content_genres">Genres</string>
    <string name="card_content_classification">Classification</string>
    <string name="card_content_ranked">Rank</string>
    <string name="card_content_popularity">Popularity</string>
    <string name="card_content_members">Members</string>
    <string name="card_content_favorites">Favorites</string>
</resources>