<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow
        android:id="@+id/mediatypeRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_media_type"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/episodesRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/episodesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_episodes"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/volumesRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/volumesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_volumes"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/volumes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_media_status"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/startRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_start"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/endRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_end"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/broadcastRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_broadcast"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/durationRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_duration"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/classificationRow"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/classificationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_classification"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/genreRow"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_genres"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/producersRow"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_content_producers"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/producers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/layout_card_loading"
            android:textColor="@color/text_app_secondary"
            android:textSize="14sp"/>
    </TableRow>

</TableLayout>