<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/card_cyan"
              android:orientation="vertical"
              android:paddingBottom="@dimen/appIntroBottomBarHeight">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/init_hint_website"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"/>


    <RadioGroup
        android:id="@+id/init_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_mal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/init_hint_myanimelist"
            android:textColor="@android:color/white"
            app:buttonTint="@color/white"/>

        <RadioButton
            android:id="@+id/radio_al"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_hint_anilist"
            android:textColor="@android:color/white"
            app:buttonTint="@color/white"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/init_hint_choose"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>