<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/infoValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/layout_card_loading"
        android:textSize="14sp"
        android:textColor="@color/text_app_secondary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/infoValue1"
        android:layout_alignParentLeft="true"
        android:text="@string/card_content_mal_score"
        android:textSize="14sp"
        />

        <TextView
            android:id="@+id/infoValue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_below="@id/infoValue1"
            android:text="@string/layout_card_loading"
            android:textSize="14sp"
            android:textColor="@color/text_app_secondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infoValue2"
            android:layout_alignParentLeft="true"
            android:text="@string/card_content_ranked"
            android:textSize="14sp"
            android:id="@+id/infoText2" />

        <TextView
            android:id="@+id/infoValue3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/infoValue2"
            android:layout_marginTop="4dp"
            android:text="@string/layout_card_loading"
            android:textSize="14sp"
            android:textColor="@color/text_app_secondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infoValue3"
            android:layout_alignParentLeft="true"
            android:text="@string/card_content_popularity"
            android:textSize="14sp"
            android:id="@+id/infoText3" />

        <TextView
            android:id="@+id/infoValue4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/infoValue3"
            android:layout_marginTop="4dp"
            android:text="@string/layout_card_loading"
            android:textSize="14sp"
            android:textColor="@color/text_app_secondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infoValue4"
            android:layout_alignParentLeft="true"
            android:text="@string/card_content_members"
            android:textSize="14sp"
            android:id="@+id/infoText4" />

    <TextView
        android:id="@+id/infoValue5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/infoValue4"
        android:layout_marginTop="4dp"
        android:text="@string/layout_card_loading"
        android:textSize="14sp"
        android:textColor="@color/text_app_secondary" />

    <TextView
        android:id="@+id/infoText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/infoValue5"
        android:layout_alignParentLeft="true"
        android:text="@string/card_content_favorites"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/infoValue6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/infoValue5"
        android:layout_marginTop="4dp"
        android:text="@string/layout_card_loading"
        android:textSize="14sp"
        android:textColor="@color/text_app_secondary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/infoValue6"
        android:layout_alignParentLeft="true"
        android:text="@string/card_content_favorites"
        android:textSize="14sp"
        android:id="@+id/infoText6" />
</RelativeLayout>